# socha-client-rust-2020

./: .gitignore  Cargo.toml  README.md
src/: client.rs  game.rs  lib.rs  logic.rs  main.rs  util.rs  xml_node.rs
src/game/: board.rs  constants.rs  coords.rs  field.rs  game_state.rs  mod.rs  move.rs  piece.rs  piece_type.rs  player.rs  player_color.rs  positioned_field.rs
src/protocol/: data.rs  game_result.rs  joined.rs  left.rs  mod.rs  player_score.rs  room.rs  score_aggregation.rs  score_cause.rs  score_definition.rs  score_fragment.rs
src/util/: error.rs  mod.rs  xml_node.rs
tests/: game_test.rs  util_test.rs
