[package]
name = "socha-client-2020"
version = "0.1.0"
authors = ["fwcd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socha-client-base = { git = "https://github.com/fwcd/socha-sdk-rust", rev = "9f25f0a" }
socha-plugin-2020 = { git = "https://github.com/fwcd/socha-sdk-rust", rev = "9f25f0a" }
getopts = "0.2.21"
log = "0.4.8"
xml-rs = "0.8.0"
simplelog = "0.7.3"
rand = "0.7.2"
