[package]
name = "socha-client-2020"
version = "0.1.0"
authors = ["fwcd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
more-asserts = "0.2"

[dependencies]
getopts = "0.2"
log = "0.4"
xml-rs = "0.8"
simplelog = "0.11"
arrayvec = "0.7"
itertools = "0.10"
rand = "0.8"
regex = "1.5"
lazy_static = "1.4"
